# SolCheckpoint

./: README.md
server/: .env  Cargo.toml
server/src/: main.rs  utils.rs
server/src/api/: user_api.rs
server/src/models/: user_model.rs
server/src/repository/: user_repo.rs
sol-checkpoint/: package.json
sol-checkpoint/src/: App.css
sol-checkpoint/src/components/Balance/: Balance.tsx
sol-checkpoint/src/components/Collection/: Collection.tsx
sol-checkpoint/src/components/Header/: Header.css  Header.tsx
sol-checkpoint/src/pages/: Home.css  Home.tsx
