[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "solcheckpoint"
path = "src/utils.rs"

[dependencies]
actix-web = "4"
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"
argon2 = "0.5.2"
rand = "0.8.5"
password-auth = "0.3.0"


[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]